El proyecto ya tiene todas las funciones establecias, solo falta agregar informacion Real de la empresa

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 </head>
 <body class="hidden">
-    <!--<div class="centrado" id="onload">
+    <div class="centrado" id="onload">
         <div class="lds-ripple"><div></div><div></div></div>
-    </div> -->
+    </div>
 
     <header>
         <nav id="nav" class="nav1">
             <div class="contenedor-nav">
                 <div class="logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="img/logo.png" alt="" id="logoHome">
                 </div>
                 <div class="enlaces" id="enlaces">
                     <a href="#" id="enlace-inicio" class="btn-header" >Inicio</a>
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <section class="about contenedor" id="servicio">
+        <section class="about contenedor" id="servicios">
             <h3>Nuestros Servicios</h3>
             <p class="after">Siempre lo mejor</p>
             <div class="servicios">
@@ -105,7 +105,7 @@
             <p class="after">Siempre lo extraordinrio</p>
             <div class="botones-work">
                 <ul>
-                    <li class="active" data-nombre='todos'>Todos</li>
+                    <li class="active filter" data-nombre='todos'>Todos</li>
                     <li class="filter" data-nombre='diseno'>Producto 1</li>
                     <li class="filter" data-nombre='programacion'>Producto 2</li>
                     <li class="filter" data-nombre='marketing'>Producto 3</li>
@@ -226,5 +226,6 @@
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/filtro.js"></script>
 </body>
 </html>
